Cambios en el POM para generar el JAR

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
 
 	<build>
 		<plugins>
+			<!-- Plugin para generar JAR ejecutable -->
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
 			<!-- Maven Compiler Plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
